--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cross-env": "^5.2.0",
     "electron": "^6.0.0",
     "electron-builder": "^21.2.0",
+    "electron-devtools-installer": "^2.2.4",
     "electron-is-dev": "^1.1.0",
     "nodemon": "^1.19.1",
     "react": "^16.8.6",
